helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "v2-ip"
spec:
  rules:
    - host: ''
      http:
        paths:
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8079
